# qrc-phase

./: README.md  desing.md  get_sb_state_emb.ipynb  get_topo_state_emb.ipynb  get_trivial_state_emb.ipynb  getemb.jl  getemb_clusterising.jl  getessh.jl  getmps.jl  gmm_test.ipynb  hamiltonian.jl  measure.jl  pyproject.toml  requirements.md  rg.ipynb  task.md
py_backend/: __init__.py  compare_itensor.py  config.py  hamiltonians.py  io.py  mq_adapter.py  observables.py  repeated_circuit.py
py_backend/solvers/: __init__.py  base.py  exact_state.py  vqe.py
scripts/: __init__.py  run_py_essh.py
tests/: __init__.py  test_cli.py  test_compare_itensor.py  test_config_and_hamiltonian.py  test_imports.py  test_io.py  test_observables.py  test_repeated_circuit.py
