[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrc-phase-py-backend"
version = "0.1.0"
description = "Python MindQuantum backend for qrc-phase ground-state and circuit workflows"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "mindspore>=1.4",
  "mindquantum>=0.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[project.scripts]
run-py-essh = "scripts.run_py_essh:main"

[tool.setuptools]
packages = ["py_backend", "py_backend.solvers", "scripts"]
